feat(security): implement remaining critical security fixes
This commit completes the remaining critical and high-priority security fixes
identified in the security assessment, addressing authorization, information
disclosure, and token management issues.

**Critical Fixes:**

1. CORS Configuration Restriction (account-service)
   - Changed from allowOrigins("*") to environment-based whitelist
   - Added CORS_ALLOWED_ORIGINS environment variable
   - Restricted allowed headers to only necessary ones
   - Enabled credentials support for secure cross-origin requests

**High-Priority Fixes:**

2. Method-Level Security (@PreAuthorize)
   - Added @PreAuthorize annotations to TransactionController
   - Implemented permission-based access control (write:transaction, write:payment)
   - Separated read and write permissions for granular access

3. Resource Ownership Checks
   - Created AuthorizationService for data-level authorization
   - Implemented verifyTransactionAccess() method
   - Implemented verifyAccountOwnership() method
   - Implemented verifySenderAccountOwnership() method
   - Updated TransactionUseCase to include userId parameter
   - Updated TransactionService to validate resource ownership
   - Updated TransactionController to extract userId from JWT

4. Error Message Information Disclosure Prevention
   - Updated GlobalExceptionHandler (shared/api-commons)
   - Removed stack trace logging from generic exception handler
   - Added getSafeErrorMessage() to filter sensitive information
   - Filters passwords, secrets, tokens, and file paths from logs
   - Added correlation ID tracking for secure debugging
   - Updated AuthController GlobalExceptionHandler
   - Updated AuthController error handling to not log stack traces

5. Refresh Token Rotation Implementation
   - Created RefreshTokenService for token lifecycle management
   - Implemented createRefreshToken() method
   - Implemented rotateRefreshToken() method with automatic rotation
   - Implemented invali